# dandelions

./: Dockerfile  README.md  dockerfile  pyproject.toml  requirenents.txt
src/llm/: manager.py
src/mcp/: server.py
src/nostr/: client.py
