[project]
name = "dandelions"
version = "1.0.0"
description = "Multi-LLM Nostr MCP Bot with User-Friendly Interface"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "nostr>=1.0.0",
    "pynostr>=0.9.0",
    "mcp>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "streamlit>=1.28.0",
    "pyyaml>=6.0",
    "cryptography>=41.0.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "mistralai>=0.0.12",
    "deepseek>=0.1.0",
    "ollama>=0.1.0",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
dandelions = "src.main:main"
dandelions-setup = "scripts.setup_wizard:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"
